--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+.productContainer{
+  display:flex;
+  flex-wrap: wrap;
 }
+.productContainer>.lnk{
+width: 150px;
+height:200px;
+padding:20px;
+margin:10px;
+box-shadow: 0px 0px 5px #dfdfdf;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.productContainer>.lnk:hover{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  box-shadow: 0px 0px 5px #463636;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
